--- a/common/daogen/daogen_ant.properties
+++ b/common/daogen/daogen_ant.properties
@@ -1,11 +1,17 @@
 # Set this to the path of the eclipse plugins directory
-plugins.path=/usr/lib64/eclipse-3.2/plugins
+plugins.path=C:/bin/eclipse/plugins
 # Set this to the path of the android.jar
-android.sdk.lib=/home/mike/download/android-sdk/platforms/android-1.5/android.jar
+android.sdk.lib=C:/bin/android-sdk-windows/platforms/android-2.1/android.jar 
 
 # You won't need to change this
 android.db.version=0.1.3
 sqlitegen.version=0.1.16
 
-sqlitegen.source=1.5
-sqlitegen.target=1.5
+sqlitegen.source=1.6
+sqlitegen.target=1.6
+
+source.. = src/
+output.. = bin/
+bin.includes = plugin.xml,\
+               META-INF/,\
+               .
