--- a/common/daogen/daogen_ant.properties
+++ b/common/daogen/daogen_ant.properties
@@ -4,11 +4,11 @@ plugins.path=C:/bin/eclipse/plugins
 android.sdk.lib=C:/bin/android-sdk-windows/platforms/android-2.1/android.jar 
 
 # You won't need to change this
-android.db.version=0.1.3
-sqlitegen.version=0.1.16
+android.db.version=0.1.4
+daogen.version=0.1.16
 
-sqlitegen.source=1.6
-sqlitegen.target=1.6
+daogen.source=1.6
+daogen.target=1.6
 
 source.. = src/
 output.. = bin/
