--- a/common/daogen/.classpath
+++ b/common/daogen/.classpath
@@ -1,10 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="src2"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="lib" path="C:/bin/android-sdk-windows/platforms/android-2.1/android.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="C:/bin/eclipse/plugins/org.eclipse.equinox.common_3.5.1.R35x_v20090807-1100.jar"/>
+	<classpathentry kind="lib" path="C:/bin/eclipse/plugins/org.eclipse.jface_3.5.1.M20090826-0800.jar"/>
+	<classpathentry kind="lib" path="C:/bin/eclipse/plugins/org.eclipse.osgi_3.5.1.R35x_v20090827.jar"/>
+	<classpathentry kind="lib" path="C:/bin/eclipse/plugins/org.eclipse.ui.workbench_3.5.1.M20090826-0800a.jar"/>
+	<classpathentry kind="lib" path="C:/bin/eclipse/plugins/org.eclipse.core.runtime_3.5.0.v20090525.jar"/>
+	<classpathentry kind="lib" path="C:/bin/eclipse/plugins/org.eclipse.jdt.core_3.5.1.v_972_R35x.jar"/>
+	<classpathentry kind="lib" path="C:/bin/eclipse/plugins/org.eclipse.core.resources_3.5.1.R35x_v20090826-0451.jar"/>
+	<classpathentry kind="lib" path="C:/bin/eclipse/plugins/org.eclipse.equinox.registry_3.4.100.v20090520-1800.jar"/>
+	<classpathentry kind="lib" path="C:/bin/eclipse/plugins/org.eclipse.core.jobs_3.4.100.v20090429-1800.jar"/>
+	<classpathentry kind="lib" path="C:/bin/eclipse/plugins/org.eclipse.swt.win32.win32.x86_64_3.5.1.v3555a.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
