--- a/common/daogen/.project
+++ b/common/daogen/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SQLiteGen</name>
+	<name>DaoGen</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -21,7 +21,7 @@
 			</arguments>
 		</buildCommand>
 		<buildCommand>
-			<name>com.antlersoft.bbq_eclipse.BBQBuilder</name>
+			<name>com.mvwsolutions.bbq_eclipse.BBQBuilder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
@@ -29,6 +29,6 @@
 	<natures>
 		<nature>org.eclipse.pde.PluginNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
-		<nature>com.antlersoft.bbq_eclipse.BBQNature</nature>
+		<nature>com.mvwsolutions.bbq_eclipse.BBQNature</nature>
 	</natures>
 </projectDescription>
