--- a/common/daogen/.classpath
+++ b/common/daogen/.classpath
@@ -17,5 +17,6 @@
 	<classpathentry kind="lib" path="C:/bin/eclipse/plugins/org.eclipse.equinox.registry_3.4.100.v20090520-1800.jar"/>
 	<classpathentry kind="lib" path="C:/bin/eclipse/plugins/org.eclipse.core.jobs_3.4.100.v20090429-1800.jar"/>
 	<classpathentry kind="lib" path="C:/bin/eclipse/plugins/org.eclipse.swt.win32.win32.x86_64_3.5.1.v3555a.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Dao"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
