plugin build fixed
git-svn-id: file:///var/svn/repos@30 21341639-f296-4de2-9f5a-af270d55a0a9

--- a/common/daogen/build.xml
+++ b/common/daogen/build.xml
@@ -22,7 +22,7 @@
 		<zip destfile="dist/daogen_eclipse_site_${daogen.version}.jar" basedir="dist/site" includes="**"  />
 	</target>
 	<target name="buildcommon">
-		<copydir dest="classes" src="../Dao/bin"/>
+		<copydir dest="bin" src="../Dao/bin"/>
 	</target>
 	<target name="clean">
 		<delete dir="bin"/>
