maven main pom added
git-svn-id: file:///var/svn/repos@33 21341639-f296-4de2-9f5a-af270d55a0a9

--- a/common/maven/lib-installer/pom.xml
+++ b/common/maven/lib-installer/pom.xml
@@ -5,14 +5,14 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.mvwsolutions</groupId>
-    <artifactId>maven-lib-installer</artifactId>
+    <artifactId>lib-installer</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <name>Third party lib installer</name>
     
     <scm>
-        <connection>scm:svn:file:///var/svn/repos/common/maven/global-parent/lib-installer</connection>
-        <developerConnection>scm:svn:file:///var/svn/repos/common/maven/global-parent/lib-installer</developerConnection>
+        <connection>scm:svn:file:///var/svn/repos/common/maven/lib-installer</connection>
+        <developerConnection>scm:svn:file:///var/svn/repos/common/maven/lib-installer</developerConnection>
         <tag>HEAD</tag>
     </scm>
 
