--- a/common/maven/global-parent/pom.xml
+++ b/common/maven/global-parent/pom.xml
@@ -161,6 +161,26 @@
         </testResources>
         
         <plugins>
+		<plugin>
+        		<groupId>org.codehaus.mojo</groupId>
+		        <artifactId>build-helper-maven-plugin</artifactId>
+		        <version>1.5</version>
+		        <executions>
+		          <execution>
+		            <id>add-source</id>
+		            <phase>generate-sources</phase>
+		            <goals>
+		              <goal>add-source</goal>
+		            </goals>
+		            <configuration>
+		              	<sources>
+                			<source>gen</source>
+              			</sources>
+            		    </configuration>
+		          </execution>
+		        </executions>
+		</plugin>
+
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>buildnumber-maven-plugin</artifactId>
@@ -418,6 +438,12 @@
 			<artifactId>x86</artifactId>
 			<version>3.3.0-v3346</version>
           </dependency>
+
+            <dependency>
+		<groupId>org.eclipse.jdt</groupId>
+		<artifactId>core</artifactId>
+		<version>3.3.0-v_771</version>
+            </dependency>
 
             <dependency>
                 <groupId>junit</groupId>
