MapsAndDb example project
git-svn-id: file:///var/svn/repos@41 21341639-f296-4de2-9f5a-af270d55a0a9

--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,13 @@
         
         <module>common/maven/global-parent</module>
         
+        <module>common/java-utils</module>
+
         <module>common/android/dao</module>
         <module>common/android/daogen</module>
+        <module>common/android/daogen-maven-plugin</module>
+
+        <module>examples/MapsAndDb</module>
 
     </modules>
 
