--- a/common/android/dao/.project
+++ b/common/android/dao/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Dao</name>
+	<name>dao</name>
 	<comment></comment>
 	<projects>
 	</projects>
