--- a/common/android/daogen/.classpath
+++ b/common/android/daogen/.classpath
@@ -1,20 +1,25 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="test"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="C:/bin/eclipse/plugins/org.eclipse.equinox.common_3.5.1.R35x_v20090807-1100.jar"/>
-	<classpathentry kind="lib" path="C:/bin/eclipse/plugins/org.eclipse.jface_3.5.1.M20090826-0800.jar"/>
-	<classpathentry kind="lib" path="C:/bin/eclipse/plugins/org.eclipse.osgi_3.5.1.R35x_v20090827.jar"/>
-	<classpathentry kind="lib" path="C:/bin/eclipse/plugins/org.eclipse.ui.workbench_3.5.1.M20090826-0800a.jar"/>
-	<classpathentry kind="lib" path="C:/bin/eclipse/plugins/org.eclipse.core.runtime_3.5.0.v20090525.jar"/>
-	<classpathentry kind="lib" path="C:/bin/eclipse/plugins/org.eclipse.jdt.core_3.5.1.v_972_R35x.jar"/>
-	<classpathentry kind="lib" path="C:/bin/eclipse/plugins/org.eclipse.core.resources_3.5.1.R35x_v20090826-0451.jar"/>
-	<classpathentry kind="lib" path="C:/bin/eclipse/plugins/org.eclipse.equinox.registry_3.4.100.v20090520-1800.jar"/>
-	<classpathentry kind="lib" path="C:/bin/eclipse/plugins/org.eclipse.core.jobs_3.4.100.v20090429-1800.jar"/>
-	<classpathentry kind="lib" path="C:/bin/eclipse/plugins/org.eclipse.swt.win32.win32.x86_64_3.5.1.v3555a.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/Dao"/>
-	<classpathentry kind="output" path="bin"/>
+  <classpathentry kind="src" path="test" output="target/test-classes" including="**/*.java"/>
+  <classpathentry kind="src" path="src" including="**/*.java"/>
+  <classpathentry kind="output" path="target/classes"/>
+  <classpathentry kind="var" path="M2_REPO/org/eclipse/core/commands/3.3.0-I20070605-0010/commands-3.3.0-I20070605-0010.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/eclipse/equinox/common/3.3.0-v20070426/common-3.3.0-v20070426.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/eclipse/core/contenttype/3.2.100-v20070319/contenttype-3.2.100-v20070319.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/eclipse/jdt/core/3.3.0-v_771/core-3.3.0-v_771.jar"/>
+  <classpathentry kind="src" path="/dao"/>
+  <classpathentry kind="var" path="M2_REPO/org/eclipse/core/expressions/3.3.0-v20070606-0010/expressions-3.3.0-v20070606-0010.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/eclipse/core/filesystem/1.1.0-v20070606/filesystem-1.1.0-v20070606.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/eclipse/help/3.3.0-v20070524/help-3.3.0-v20070524.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/eclipse/jface/3.3.0-I20070606-0010/jface-3.3.0-I20070606-0010.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/eclipse/core/jobs/3.3.0-v20070423/jobs-3.3.0-v20070423.jar"/>
+  <classpathentry kind="var" path="M2_REPO/junit/junit/4.4/junit-4.4.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/eclipse/osgi/3.3.0-v20070530/osgi-3.3.0-v20070530.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/eclipse/equinox/preferences/3.2.100-v20070522/preferences-3.2.100-v20070522.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/eclipse/equinox/registry/3.3.0-v20070522/registry-3.3.0-v20070522.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/eclipse/core/resources/3.3.0-v20070604/resources-3.3.0-v20070604.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/eclipse/core/runtime/3.3.100-v20070530/runtime-3.3.100-v20070530.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/eclipse/text/3.3.0-v20070606-0010/text-3.3.0-v20070606-0010.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/eclipse/ui/workbench/3.3.0-I20070608-1100/workbench-3.3.0-I20070608-1100.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/eclipse/swt/win32/win32/x86/3.3.0-v3346/x86-3.3.0-v3346.jar"/>
+  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 </classpath>
