--- a/common/android/daogen/.project
+++ b/common/android/daogen/.project
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>DaoGen</name>
+	<name>daogen</name>
 	<comment></comment>
 	<projects>
+		<project>dao</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
