--- a/common/maven/global-parent/pom.xml
+++ b/common/maven/global-parent/pom.xml
@@ -16,7 +16,7 @@
         <developerConnection>scm:svn:file:///var/svn/repos/common/maven/global-parent</developerConnection>
     </scm> 
 
-    <repositories>
+    <!-- repositories>
 
         <repository>
             <id>mvn2</id>
@@ -58,7 +58,7 @@
             <url>http://repo2.maven.org/maven2</url>
         </pluginRepository>
         
-    </pluginRepositories>
+    </pluginRepositories -->
     
     <profiles>
       <profile>
@@ -242,6 +242,26 @@
                     </archive>
                 </configuration>
             </plugin>
+
+	<plugin>
+        	<groupId>com.mvwsolutions.common.android</groupId>
+	        <artifactId>daogen-maven-plugin</artifactId>
+        	<version>1.0-SNAPSHOT</version>
+		<configuration>
+    			<genOutput>gen</genOutput>
+		</configuration>
+
+		<!-- executions>
+	          <execution>
+        	    <phase>generate-sources</phase>
+	            <goals>
+        	      <goal>run</goal>
+	            </goals>
+        	  </execution>
+	        </executions -->
+
+      	</plugin>
+
             
         </plugins>
     </build>
@@ -373,6 +393,12 @@
 
 		        <exclusions>
 			        <exclusion>
+					<groupId>org.eclipse</groupId>
+					<artifactId>jface</artifactId>
+			        </exclusion>
+
+
+			        <exclusion>
 			          <groupId>org.eclipse.core</groupId>
 			          <artifactId>expressions</artifactId>
 			        </exclusion>
@@ -443,6 +469,13 @@
 		<groupId>org.eclipse.jdt</groupId>
 		<artifactId>core</artifactId>
 		<version>3.3.0-v_771</version>
+
+		<exclusions>
+			<exclusion>
+				<groupId>org.eclipse.equinox</groupId> 
+				<artifactId>common</artifactId>
+			</exclusion>
+		</exclusions>
             </dependency>
 
             <dependency>
@@ -451,7 +484,6 @@
                 <version>4.4</version>
 		<scope>test</scope>
             </dependency>
-
 
         </dependencies>
         
