--- a/vizio/VizioMarket/AndroidManifest.xml
+++ b/vizio/VizioMarket/AndroidManifest.xml
@@ -2,8 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.mvw.vizio"
       android:versionCode="1"
-      android:versionName="1.0">
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+      android:versionName="1.0"
+      >
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
         <activity android:name=".activity.MarketHome"
                   android:label="@string/app_name">
             <intent-filter>
@@ -15,4 +16,5 @@
     </application>
     <uses-sdk android:minSdkVersion="7" />
 	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 </manifest> 
