project tree restructure
git-svn-id: file:///var/svn/repos@56 21341639-f296-4de2-9f5a-af270d55a0a9

--- a/common/android/daogen/.project
+++ b/common/android/daogen/.project
@@ -1,35 +1,26 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>daogen</name>
-	<comment></comment>
-	<projects>
-		<project>dao</project>
-	</projects>
-	<buildSpec>
-		<buildCommand>
-			<name>org.eclipse.jdt.core.javabuilder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
-			<name>org.eclipse.pde.ManifestBuilder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
-			<name>org.eclipse.pde.SchemaBuilder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
-			<name>com.mvwsolutions.bbq_eclipse.BBQBuilder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-	</buildSpec>
-	<natures>
-		<nature>org.eclipse.pde.PluginNature</nature>
-		<nature>org.eclipse.jdt.core.javanature</nature>
-		<nature>com.mvwsolutions.bbq_eclipse.BBQNature</nature>
-	</natures>
+  <name>daogen</name>
+  <comment/>
+  <projects>
+    <project>dao</project>
+  </projects>
+  <buildSpec>
+    <buildCommand>
+      <name>org.eclipse.jdt.core.javabuilder</name>
+    </buildCommand>
+    <buildCommand>
+      <name>org.eclipse.pde.ManifestBuilder</name>
+    </buildCommand>
+    <buildCommand>
+      <name>org.eclipse.pde.SchemaBuilder</name>
+    </buildCommand>
+    <buildCommand>
+      <name>com.mvwsolutions.bbq_eclipse.BBQBuilder</name>
+    </buildCommand>
+  </buildSpec>
+  <natures>
+    <nature>org.eclipse.pde.PluginNature</nature>
+    <nature>org.eclipse.jdt.core.javanature</nature>
+    <nature>com.mvwsolutions.bbq_eclipse.BBQNature</nature>
+  </natures>
 </projectDescription>
