--- a/pom.xml
+++ b/pom.xml
@@ -22,13 +22,18 @@
         
         <module>common/maven/global-parent</module>
         
-        <module>common/java-utils</module>
+        <module>common/java/common</module>
+        <module>common/java/common-server</module>
+        <module>common/java/common-web</module>
+        <module>common/java/common-test</module>
 
         <module>common/android/dao</module>
         <module>common/android/daogen</module>
         <module>common/android/daogen-maven-plugin</module>
 
-        <module>examples/MapsAndDb</module>
+        <!-- module>examples/MapsAndDb</module -->
+
+        <module>products/DroidDateServer</module>
 
     </modules>
 
