--- a/common/android/daogen-maven-plugin/pom.xml
+++ b/common/android/daogen-maven-plugin/pom.xml
@@ -61,7 +61,7 @@
 
         <dependency>
 	    <groupId>com.mvwsolutions.common</groupId>
-	    <artifactId>java-utils</artifactId>
+	    <artifactId>java-common</artifactId>
 	    <version>1.0-SNAPSHOT</version>
         </dependency>
 
