--- a/common/java/common/pom.xml
+++ b/common/java/common/pom.xml
@@ -8,35 +8,27 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <groupId>com.mvwsolutions.common</groupId>
-    <artifactId>java-utils</artifactId>
+    <artifactId>java-common</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>Common Java utils</name>
+    <name>Java common</name>
 
     <scm>
-        <connection>scm:svn:file:///var/svn/repos/common/java-utils</connection>
-        <developerConnection>scm:svn:file:///var/svn/repos/common/java-utils</developerConnection>
+        <connection>scm:svn:file:///var/svn/repos/common/java/common</connection>
+        <developerConnection>scm:svn:file:///var/svn/repos/common/java/common</developerConnection>
         <tag>HEAD</tag>
     </scm>    
 
     <dependencies>
         
         <!-- projects -->
-
-        <!-- dependency>
-            <groupId>com.mvwsolutions</groupId>
-            <artifactId>common.android.dao</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency -->
-
         
         <!-- third party libs -->
         
-        <!-- dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-beans</artifactId>
-        </dependency -->
-        
+		<dependency>
+		    <groupId>org.simpleframework</groupId>
+		    <artifactId>simple-xml</artifactId>
+		</dependency>
 
     </dependencies>
     
