--- a/common/maven/global-parent/pom.xml
+++ b/common/maven/global-parent/pom.xml
@@ -137,7 +137,7 @@
                 </excludes>
             </resource>
             <resource>
-                <directory>src-res</directory>
+                <directory>src-res-f</directory>
                 <includes>
                     <include>*app.properties</include>
                 </includes>
@@ -152,7 +152,7 @@
                 </excludes>
             </testResource>
             <testResource>
-                <directory>test-res</directory>
+                <directory>test-res-f</directory>
                 <includes>
                     <include>*app.properties</include>
                 </includes>
@@ -484,6 +484,198 @@
                 <version>4.4</version>
 		<scope>test</scope>
             </dependency>
+
+		<dependency>
+		    <groupId>org.simpleframework</groupId>
+		    <artifactId>simple-xml</artifactId>
+		    <version>2.3.2</version>
+
+			<exclusions>
+				<exclusion>
+				  <groupId>stax</groupId>
+				  <artifactId>stax</artifactId>
+				</exclusion>
+
+				<exclusion>
+				  <groupId>stax</groupId>
+				  <artifactId>stax-api</artifactId>
+				</exclusion>
+
+			</exclusions>
+
+		</dependency>
+
+            <dependency>
+                <groupId>commons-dbcp</groupId>
+                <artifactId>commons-dbcp</artifactId>
+                <version>1.4</version>
+                <scope>compile</scope>
+            </dependency>
+
+
+            
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate</artifactId>
+                <version>3.2.7.ga</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-annotations</artifactId>
+                <version>3.4.0.GA</version>
+            </dependency>
+            
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-commons-annotations</artifactId>
+                <version>3.3.0.ga</version>
+            </dependency>
+            
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>1.5.8</version>
+            </dependency>
+            
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>jcl104-over-slf4j</artifactId>
+                <version>1.5.8</version>
+            </dependency>
+            
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
+                <version>1.5.8</version>
+            </dependency>
+            
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-beans</artifactId>
+                <version>3.0.1.RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context</artifactId>
+                <version>3.0.1.RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context-support</artifactId>
+                <version>3.0.1.RELEASE</version>
+            </dependency>
+            
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-core</artifactId>
+                <version>3.0.1.RELEASE</version>
+            </dependency>
+            
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context</artifactId>
+                <version>3.0.1.RELEASE</version>
+            </dependency>
+            
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-orm</artifactId>
+                <version>3.0.1.RELEASE</version>
+            </dependency>
+            
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-aop</artifactId>
+                <version>3.0.1.RELEASE</version>
+            </dependency>
+            
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-tx</artifactId>
+                <version>3.0.1.RELEASE</version>
+            </dependency>
+            
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-jdbc</artifactId>
+                <version>3.0.1.RELEASE</version>
+            </dependency>
+            
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context</artifactId>
+                <version>3.0.1.RELEASE</version>
+            </dependency>
+            
+            <dependency>
+                <groupId>quartz</groupId>
+                <artifactId>quartz</artifactId>
+                <version>1.5.2</version>
+            </dependency>
+            
+            <dependency>
+                <groupId>org.springframework.ws</groupId>
+                <artifactId>spring-oxm</artifactId>
+                <version>1.5.9</version>
+            </dependency>
+            
+            <dependency>
+                <groupId>org.springframework.ws</groupId>
+                <artifactId>spring-oxm-tiger</artifactId>
+                <version>1.5.9</version>
+            </dependency>
+            
+            <dependency>
+                <groupId>org.springframework.ws</groupId>
+                <artifactId>spring-oxm-tiger</artifactId>
+                <version>1.5.9</version>
+            </dependency>
+            
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>servlet-api</artifactId>
+                <version>2.5</version>
+            </dependency>
+            
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-webmvc</artifactId>
+                <version>3.0.1.RELEASE</version>
+            </dependency>
+
+            <dependency>
+                <groupId>commons-httpclient</groupId>
+                <artifactId>commons-httpclient</artifactId>
+                <version>3.1</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.mortbay.jetty</groupId>
+                <artifactId>jetty-servlet-tester</artifactId>
+                <version>6.1.5</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>jstl</artifactId>
+                <scope>runtime</scope>
+                <version>1.1.2</version>
+            </dependency>
+
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>jsp-api</artifactId>
+	        <version>2.0</version>
+            </dependency>
+        
+            <dependency>
+                <groupId>taglibs</groupId>
+                <artifactId>standard</artifactId>
+                <scope>runtime</scope>
+                <version>1.1.2</version>
+            </dependency>            
 
         </dependencies>
         
