--- a/examples/MapsAndDb/pom.xml
+++ b/examples/MapsAndDb/pom.xml
@@ -42,6 +42,12 @@
               <artifactId>android</artifactId>
               <version>2.1</version>
           </dependency>
+
+		<dependency>
+		    <groupId>org.simpleframework</groupId>
+		    <artifactId>simple-xml</artifactId>
+		</dependency>
+
         
 
     </dependencies>
