maven build fixed
git-svn-id: file:///var/svn/repos@64 21341639-f296-4de2-9f5a-af270d55a0a9

--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -31,6 +31,8 @@
         <module>common/android/daogen</module>
         <module>common/android/daogen-maven-plugin</module>
 
+	<module>common/maven/android-parent</module>
+
         <!-- module>examples/MapsAndDb</module -->
 
 
