updated pom.xml to include DroidCommand framework
git-svn-id: file:///var/svn/repos@73 21341639-f296-4de2-9f5a-af270d55a0a9

--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -30,6 +30,7 @@
         <module>common/android/dao</module>
         <module>common/android/daogen</module>
         <module>common/android/daogen-maven-plugin</module>
+        <module>common/android/DroidCommand</module>
 
 	<module>common/maven/android-parent</module>
 
