--- a/trunk/common/maven/android-parent/pom.xml
+++ b/trunk/common/maven/android-parent/pom.xml
@@ -19,7 +19,21 @@
     </scm> 
 
     <build>
-        <plugins>	
+        <plugins>
+            <plugin>
+                <groupId>com.jayway.maven.plugins.android.generation2</groupId>
+                <artifactId>maven-android-plugin</artifactId>
+                <version>2.3.0</version>
+                <configuration>
+                    <sdk>
+                        <platform>2.1</platform>
+                    </sdk>
+                    <deleteConflictingFiles>true</deleteConflictingFiles>
+                </configuration>
+                <extensions>true</extensions>
+            </plugin>
+
+	
 	<plugin>
         	<groupId>com.mvwsolutions.common.android</groupId>
 	        <artifactId>daogen-maven-plugin</artifactId>
