--- a/trunk/common/android/daogen-maven-plugin/pom.xml
+++ b/trunk/common/android/daogen-maven-plugin/pom.xml
@@ -53,6 +53,18 @@
                 <filtering>true</filtering>
             </testResource>
         </testResources>
+
+	<plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+	</plugins>
     </build>    
 
     <dependencies>
