--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -30,11 +30,11 @@
         <module>common/android/dao</module>
         <module>common/android/daogen</module>
         <module>common/android/daogen-maven-plugin</module>
-        <module>common/android/DroidCommand</module>
+        <!-- module>common/android/DroidCommand</module -->
 
 	<module>common/maven/android-parent</module>
 
-        <module>examples/MapsAndDb</module>
+        <!-- module>examples/MapsAndDb</module -->
 
 
         <module>products/in-house/DroidDateServerAPI</module>
