--- a/trunk/common/android/DroidCommand/pom.xml
+++ b/trunk/common/android/DroidCommand/pom.xml
@@ -23,11 +23,10 @@
         
         <!-- projects -->
 
-        <!-- dependency>
-            <groupId>com.mvwsolutions</groupId>
-            <artifactId>DroidCommand</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
         
 
     </dependencies>
