DroidDateCLient added to maven build
git-svn-id: file:///var/svn/repos@176 21341639-f296-4de2-9f5a-af270d55a0a9

--- a/trunk/common/maven/android-parent/pom.xml
+++ b/trunk/common/maven/android-parent/pom.xml
@@ -26,7 +26,7 @@
                 <version>2.3.0</version>
                 <configuration>
                     <sdk>
-                        <platform>2.1</platform>
+                        <platform>${android-sdk-version}</platform>
                     </sdk>
                     <deleteConflictingFiles>true</deleteConflictingFiles>
                 </configuration>
@@ -39,7 +39,7 @@
 	        <artifactId>daogen-maven-plugin</artifactId>
         	<version>1.0-SNAPSHOT</version>
 		<configuration>
-    			<genOutput>gen</genOutput>
+    			<genOutput>gen2</genOutput> <!-- cannot use 'gen' as it's conflicting with Eclipse -->
 		</configuration>
 
 		<!-- executions>
