--- a/trunk/common/maven/global-parent/pom.xml
+++ b/trunk/common/maven/global-parent/pom.xml
@@ -535,6 +535,15 @@
                 <artifactId>spring-beans</artifactId>
                 <version>3.0.1.RELEASE</version>
             </dependency>
+
+
+        <dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-support</artifactId>
+                <version>2.0.8</version>
+        </dependency>
+
+
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-context</artifactId>
