--- a/trunk/common/maven/android-parent/pom.xml
+++ b/trunk/common/maven/android-parent/pom.xml
@@ -42,14 +42,14 @@
     			<genOutput>gen2</genOutput> <!-- cannot use 'gen' as it's conflicting with Eclipse -->
 		</configuration>
 
-		<!-- executions>
+		<executions>
 	          <execution>
-        	    <phase>generate-sources</phase>
+        	    <phase>process-classes</phase>
 	            <goals>
         	      <goal>run</goal>
 	            </goals>
         	  </execution>
-	        </executions -->
+	        </executions>
 
       	</plugin>
         </plugins>
